fixed borders and letter spacing attributes

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -2,8 +2,7 @@
   width: 200px;
   height: 408px;
   box-sizing: border-box;
-  border: solid $productBorderColor;
-  border-width: 1px;
+  border: 1px solid $productBorderColor;
   border-radius: 5px;
   background-color: #fff;
 
@@ -36,7 +35,7 @@
     font-size: 10px;
     color: $productLightColor;
     line-height: 14px;
-    letter-spacing: 0%;
+    letter-spacing: 0;
   }
 
   .review {
@@ -74,7 +73,7 @@
       color: $productLightColor;
       font-size: 12px;
       line-height: 18px;
-      letter-spacing: 0%;
+      letter-spacing: 0;
       align-self: flex-end;
     }
 
@@ -86,7 +85,7 @@
       color: $productDarkColor;
       font-size: 16px;
       line-height: 18px;
-      letter-spacing: 0%;
+      letter-spacing: 0;
       text-align: right;
       align-self: flex-end;
     }
@@ -108,7 +107,7 @@
       font-weight: 700;
       font-size: 14px;
       line-height: 16px;
-      letter-spacing: 0%;
+      letter-spacing: 0;
       text-align: center;
       text-transform: uppercase;
       color: #fff;
@@ -120,8 +119,7 @@
     height: 40px;
     margin-top: 16px;
     margin-left: 16px;
-    border: solid $productButtonColor;
-    border-width: 1px;
+    border: 1px solid $productButtonColor;
     border-radius: 5px;
     box-sizing: border-box;
     background-color: #fff;
@@ -134,7 +132,7 @@
       font-weight: 700;
       font-size: 14px;
       line-height: 16px;
-      letter-spacing: 0%;
+      letter-spacing: 0;
       text-align: center;
       text-transform: uppercase;
       color: $productButtonColor;
